style: add overflow-y: scroll to index.css html - prevent scrollbar from repositioning content

--- a/styles/index.css
+++ b/styles/index.css
@@ -9,3 +9,7 @@
 @tailwind components;
 /* purgecss end ignore */
 @tailwind utilities;
+
+html {
+  overflow-y: scroll;
+}
